--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "sitemap": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "exportt":"next build && next export && next-sitemap && next build && next export"
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
